k8s/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: wurstmeister/kafka
          ports:
            - containerPort: 9092
            - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: dev
spec:
  type: ClusterIP
  ports:
#    외부접속용 포트 이름
    - name: outside
      port: 9092
      targetPort: 9092
    - name: inside
#      내부 브로커 통신용 포틍 이름 추가
      port: 9093
      targetPort: 9093
  selector:
    app: kafka
