k8s/ingress.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-backend-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: my-issuer
spec:
  tls:
    - hosts:
        - "test.groundi.net"
      secretName: server-dev-com-tls
  rules:
    - host: test.grouni.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigateway-service
                port:
                  number: 80
